Fixed bars in visitors user stories.
Added bars to visitors user stories.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -41,10 +41,10 @@ Table 2: User roles.
 | US03 | Home Page | high | As a Visitor, I want to access home page, so that I can see a brief website's description.  |
 | US04 | About page | high | As a Visitor, I want to access about page, so I can see the complete information about the website. |
 | US05 | FAQ page | high | As a Visitor, I want to access FAQ page, so I can get answers to most frequently asked questions. |
-| US06 | Contact page | high | As a Visitor, I want to access contact page, so I can have ways to contact the owner if I want to.
+| US06 | Contact page | high | As a Visitor, I want to access contact page, so I can have ways to contact the owner if I want to. |
 | US07 | Projects page | high | As a Visitor, I want to access projects page, so I can see public projects.
-| US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.
-| US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.
+| US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook. |
+| US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.  |
 
 Table 2: Visitor's user stories.
 
