fix SO THAT in website admin

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -41,10 +41,10 @@ Table 2: User roles.
 | US03 | Home Page | high | As a Visitor, I want to access home page, so that I can see a brief website's description.  |
 | US04 | About page | high | As a Visitor, I want to access about page, so I can see the complete information about the website. |
 | US05 | FAQ page | high | As a Visitor, I want to access FAQ page, so I can get answers to most frequently asked questions. |
-| US06 | Contact page | high | As a Visitor, I want to access contact page, so I can have ways to contact the owner if I want to. |
+| US06 | Contact page | high | As a Visitor, I want to access contact page, so I can have ways to contact the owner if I want to.
 | US07 | Projects page | high | As a Visitor, I want to access projects page, so I can see public projects.
-| US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook. |
-| US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.  |
+| US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.
+| US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.
 
 Table 2: Visitor's user stories.
 
@@ -82,13 +82,13 @@ Table 2: Visitor's user stories.
 ### 2.2.3 Website Administrator
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US24| Create Projects | high | As a Website Administrator, I want to create open-source projects to all users.|
-| US25| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content.|
-| US26| Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions.|
+| US24| Create Projects | high | As a Website Administrator, I want to create open-source projects to all users, so that I can create community friendly projects.|
+| US25| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
+| US26| Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
 | US27| Accept User     | high | As an Website Administrator, I want to accept the registration of a new system user, so that he can access restricted content.|
 | US28| Ban User        | high | As an Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
-| US29| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes.|
-| US30| General Messages| low | As an Website Administrator, I want to send messages to all users.|
+| US29| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
+| US30| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
 
 ## A1. Annex: Supplementary requirements
 
