--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -60,6 +60,7 @@ Table 2: Visitor's user stories.
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US14 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
+| US15 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
 | US15 | Commentate Task | medium | As a project member, I want to be able to comment the ask, so that i can provide insight into a task.|
 | US16 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
 | US17 | Ask to close task | medium | As a project member, I want to be able to signal that a task has been completed, so that the project administrator can close it.|
@@ -69,8 +70,8 @@ Table 2: Visitor's user stories.
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US19 | Close Task | high | As a project administrator, I want to be able to fully close tasks that have been completed, so that they don't clutter the task list.|
+| US19 | Edit tasks | high | As a project administrator, I want to edit a task, so that i can better convey what is needed.|
 | US20 | Manage project member | medium | As a project administrator, I want to be able to add & remove project members, so that they can contribute to our project.|
-
 
 ### 2.2.3 Project Owner
 | Identifier  | Name          | Priority  | Description |
