--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -108,7 +108,7 @@ Table 2: Visitor's user stories.
 | TR01 |Usability |The system should be simple and easy to use |
 | TR02 |Performance |The system should have very short response times |
 | TR03 |Web Application|The system should be implemented as a Web Application with dynamic pages (HTML5, JavaScript, CSS3 and PHP) |
-| TR04 |Portability |The server side system should work on Linux, Windows and MacOs |
+| TR04 |Portability |The server side system should only work on Linux |
 | TR05 |Database |Must use PostgreSQL database management |
 | TR06 |Security |System will protect information from unauthorized access through the use of an authentication and privilege verification system (XSS, CSRF, SQL injection, Password Storage, Cross-site Scripting) |
 | TR07 |Capability |System must be prepared to deal with user base growth and corresponding operations |
