Updated Technical Requirements

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -105,14 +105,16 @@ Table 2: Visitor's user stories.
 ### A1.2. Technical requirements
 | Identifier | Name | Description |
 |:-----------:|:-------------:|:-----------|
-| TR01 |Usability |The system should be simple and easy to use |
-| TR02 |Performance |The system should have very short response times |
-| TR03 |Web Application|The system should be implemented as a Web Application with dynamic pages (HTML5, JavaScript, CSS3 and PHP) |
-| TR04 |Portability |The server side system should only work on Linux |
-| TR05 |Database |Must use PostgreSQL database management |
-| TR06 |Security |System will protect information from unauthorized access through the use of an authentication and privilege verification system (XSS, CSRF, SQL injection, Password Storage, Cross-site Scripting) |
-| TR07 |Capability |System must be prepared to deal with user base growth and corresponding operations |
-| TR08 |Ethics |The system must respect the ethical principles in software development (for example, the password must be stored encrypted to ensure that only the owner knows it) |
+| TR01 |Availability |The system must be available 99 percent of the time 24/7 |
+| TR02 |Usability |The system should be simple and easy to use |
+| TR03 |Performance |The system should have very short response times |
+| TR04 |Web Application|The system should be implemented as a Web Application with dynamic pages (HTML5, JavaScript, CSS3 and PHP) |
+| TR05 |Portability |The server side system should only work on Linux |
+| TR06 |Database |Must use PostgreSQL database management |
+| TR07 |Security |System will protect information from unauthorized access through the use of an authentication and privilege verification system (XSS, CSRF, SQL injection, Password Storage, Cross-site Scripting) |
+| TR08 |Robustness |The system must be prepared to handle and continue operating when runtime errors occur |
+| TR09 |Scalability |System must be prepared to deal with user base growth and corresponding operations |
+| TR10 |Ethics |The system must respect the ethical principles in software development. |
 
 ### A1.3. Restrictions
 | Identifier | Name | Description |
