Added revision history

--- a/artifacts/A1.md
+++ b/artifacts/A1.md
@@ -15,8 +15,9 @@ An administrator is allowed to add and remove team members, delete and edit all 
 
 Changes made to the first submission:
 
-1. Item 1
-1. Item 2
+1. Typo: "*An* Administrator" fixed.
+2. Typo in group's third element email fixed.
+3. Revision History filled out.
 
 ***
 
