--- a/artifacts/A1.md
+++ b/artifacts/A1.md
@@ -4,10 +4,10 @@
 
 >Currently, whatever the field may be, there's always the need to organize your project properly and to have good communication between team members to maximize success. With that in mind we decided to develop a web based project management system with emphasis on simplicity and efficiency, such as organizing and updating a project so it's task's processes becomes fast and easy.
 
->  Users may be associated with multiple projects. Each project has a team, task list, and a discussion forum. Individual tasks can be split into groups and each task can be commented by team members. Projects can be both public and free. In a project there can be only one owner who has the ability to select other administrators & transfer ownership.
+> Users may be associated with multiple projects. Each project has a team, task list, and a discussion forum. Individual tasks can be split into groups and each task can be commented by team members. Projects can be both public and free. In a project there can be only one owner who has the ability to select other administrators & transfer ownership.
 An administrator is allowed to add and remove team members, delete and edit all tasks, and finally moderate the discussion forum.
 
-> Finally the users will be placed into 3 categories with different permissions, Visitors, Users and Website Administrators. Visitors can only view public projects, but can't contribute to any of them. Users will  be able to contribute to their own projects or the ones they've been added. Website Administrators manage all projects, deleting or banning projects and user that doesn't comply to the terms of service.
+> Finally the users will be placed into 3 categories with different permissions, Visitors, Users and Website Administrators. Visitors can only view public projects, but can't create or contribute to any of them. Users will be able to create and contribute to their own projects or the ones they've been added to. Website Administrators have all the User's permissions an also manage all projects, deleting or banning projects and users that don't comply to the terms of service.
 
 ***
 
@@ -17,7 +17,8 @@ Changes made to the first submission:
 
 1. Typo: "*An* Administrator" fixed.
 2. Typo in group's third element email fixed.
-3. Revision History filled out.
+3. Referred to project creation functionalities when addressing the user's permissions.
+4. Revision History filled out.
 
 ***
 
