changed revision history

--- a/artifacts/A1.md
+++ b/artifacts/A1.md
@@ -15,10 +15,13 @@ An administrator is allowed to add and remove team members, delete and edit all 
 
 Changes made to the first submission:
 
-1. Typo: "*An* Administrator" fixed.
-2. Typo in group's third element email fixed.
-3. Referred to project creation functionalities when addressing the user's permissions.
-4. Revision History filled out.
+1. 18/02/2018
+* Typo: "*An* Administrator" fixed.
+* Typo in group's third element email fixed.
+* Referred to project creation functionalities when addressing the user's permissions.
+* Revision History filled out.
+
+2. 
 
 ***
 
