--- a/artifacts/A1.md
+++ b/artifacts/A1.md
@@ -15,17 +15,14 @@ An administrator is allowed to add and remove team members, delete and edit all 
 
 Changes made to the first submission:
 
-1. 18/02/2018
-* Typo: "*An* Administrator" fixed.
-* Typo in group's third element email fixed.
-* Referred to project creation functionalities when addressing the user's permissions.
-* Revision History filled out.
-
-2. 
+1. Typo: *An* Administrator" fixed.
+2. Typo in group's third element email fixed.
+3. Referred to project creation functionalities when addressing the user's permissions.
+4. Revision History filled out.
 
 ***
 
-GROUP1743, 11/02/2018
+GROUP1743, 18/02/2018
 
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt   
 > João Pedro Teixeira Pereira de Sá, up201506252@fe.up.pt   
