Refactor some text.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -8,10 +8,10 @@ For the **project management**, the actors are represented in the figure below a
 
 ![diagram](https://yuml.me/0ad81515.png)
 
-Figure 1: actors.
+Figure 1: Actors.
 
 ![user roles](https://yuml.me/a685d723.png)
-Figure 2: user roles.
+Figure 2: User Roles.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
@@ -29,7 +29,7 @@ Table 1: Actor's description.
 | Project Member | Can contribute to projects, creating and solving tasks | A project member |
 
 
-Table 2: User roles.
+Table 2: User Roles.
 
 ## 2. User Stories
 
@@ -46,7 +46,7 @@ Table 2: User roles.
 | US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.
 | US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.
 
-Table 2: Visitor's user stories.
+Table 2: Visitor's User Stories.
 
 ### 2.2. User
 | Identifier | Name | Priority | Description |
