Stashing images in repository for longevity purposes

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -6,12 +6,12 @@ This artifact contains the specification of the actors and their users stories, 
 
 For the **project management**, the actors are represented in the figure below and described in the table.
 
-![diagram](https://yuml.me/0ad81515.png)
+![diagram](images/Actors.png)
 
 Figure 1: Actors.
 
-![user roles](https://yuml.me/a685d723.png)
-Figure 2: User Roles.
+![user roles](images/User_Roles.png)
+Figure 2: user roles.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
