--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -11,7 +11,7 @@ For the **project management**, the actors are represented in the figure below a
 Figure 1: Actors.
 
 ![user roles](images/User_Roles.png)
-Figure 2: user roles.
+Figure 2: User Roles.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
