Added tables subtitles.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -11,7 +11,8 @@ For the **project management**, the actors are represented in the figure below a
 Figure 1: Actors.
 
 ![user roles](images/User_Roles.png)
-Figure 2: User Roles.
+
+Figure 2: User roles.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
@@ -29,7 +30,7 @@ Table 1: Actor's description.
 | Project Member | Can contribute to projects, creating and solving tasks | A project member |
 
 
-Table 2: User Roles.
+Table 2: User's roles.
 
 ## 2. User Stories
 
@@ -46,7 +47,7 @@ Table 2: User Roles.
 | US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.
 | US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.
 
-Table 2: Visitor's User Stories.
+Table 3: Visitor's user stories.
 
 ### 2.2. User
 | Identifier | Name | Priority | Description |
@@ -55,6 +56,8 @@ Table 2: Visitor's User Stories.
 | US11 | Edit profile | high | As an User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
 | US12 | Create project | high | As an User, I want to be able to create a project, so that I can use the website service |
 | US13 | Statistics | low | As an User, I want to check usage statistics (for example the top of most requested works), so that I stay informed.|
+
+Table 4: User user's stories.
 
 ### 2.2.1 Project Member
 | Identifier  | Name          | Priority  | Description |
@@ -66,6 +69,8 @@ Table 2: Visitor's User Stories.
 | US17 | Ask to close task | medium | As a project member, I want to be able to signal that a task has been completed, so that the project administrator can close it.|
 | US18 | Chat in the forum | medium | As a project member, I want to be able to chat in the forum, so that i can contribute to the project via the discussion forum.|
 
+Table 5: Project Member's user stories.
+
 ### 2.2.2 Project Administrator
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
@@ -73,12 +78,16 @@ Table 2: Visitor's User Stories.
 | US19 | Edit tasks | high | As a project administrator, I want to edit a task, so that i can better convey what is needed.|
 | US20 | Manage project member | medium | As a project administrator, I want to be able to add & remove project members, so that they can contribute to our project.|
 
+Table 6: Project Administrator's user stories.
+
 ### 2.2.3 Project Owner
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US21 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
 | US22 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
 | US23 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
+
+Table 7: Project Owner's user stories.
 
 ### 2.2.3 Website Administrator
 | Identifier  | Name          | Priority  | Description |
@@ -91,6 +100,8 @@ Table 2: Visitor's User Stories.
 | US29| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
 | US30| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
 
+Table 8: Website Administrator user's stories.
+
 ## A1. Annex: Supplementary requirements
 
 > Annex including business rules, technical requirements, and restrictions.
@@ -101,6 +112,8 @@ Table 2: Visitor's User Stories.
 | :----------:|:-------------:|:-----------|
 | BR01 | Link User-Project | User can create a new project or join others by invitation.  |
 | BR02 | | |
+
+Table 9: Business rules.
 
 ### A1.2. Technical requirements
 | Identifier | Name | Description |
@@ -116,10 +129,15 @@ Table 2: Visitor's User Stories.
 | TR09 |Scalability |System must be prepared to deal with user base growth and corresponding operations |
 | TR10 |Ethics |The system must respect the ethical principles in software development. |
 
+Table 10: Technical requiriments.
+
 ### A1.3. Restrictions
 | Identifier | Name | Description |
 | :----------:|:-------------:|:----------- |
 | C01 |Deadline |The system should be ready to be used at the beginning of the semester so the students can organize themselves as quickly as possible|
+
+Table 11: Restrictions
+
 ***
 
 ## Revision history
