--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -40,22 +40,22 @@ Table 2: User's roles.
 | US01 | Log in | high | As a Visitor, I want to authenticate into the system, so that I can access privileged information.  |
 | US02 | Register | high | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.  |
 | US03 | Home Page | high | As a Visitor, I want to access home page, so that I can see a brief website's description.  |
-| US04 | About page | high | As a Visitor, I want to access about page, so I can see the complete information about the website. |
-| US05 | FAQ page | high | As a Visitor, I want to access FAQ page, so I can get answers to most frequently asked questions. |
-| US06 | Contact page | high | As a Visitor, I want to access contact page, so I can have ways to contact the owner if I want to.
-| US07 | Projects page | high | As a Visitor, I want to access projects page, so I can see public projects.
-| US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.
-| US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.
+| US04 | About page | high | As a Visitor, I want to access about page, so that I can see the complete information about the website. |
+| US05 | FAQ page | high | As a Visitor, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
+| US06 | Contact page | high | As a Visitor, I want to access contact page, so that I can have ways to contact the owner if I want to.|
+| US07 | Projects page | high | As a Visitor, I want to access projects page, so that I can see public projects.|
+| US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.|
+| US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.|
 
 Table 3: Visitor's user stories.
 
 ### 2.2. User
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US10 | Search projects | high | As an User, I want to search through the projects that are open to me, so that I can see them.|
+| US10 | Search projects | high | As an User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
 | US11 | Edit profile | high | As an User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
-| US12 | Create project | high | As an User, I want to be able to create a project, so that I can use the website service |
-| US13 | Statistics | low | As an User, I want to check usage statistics (for example the top of most requested works), so that I stay informed.|
+| US12 | Create project | high | As an User, I want to be able to create a project, so that I can use the website service.|
+| US13 | Statistics | low | As an User, I want to check usage statistics (for example the user that has contributed the  most to a project), so that I can stay informed.|
 
 Table 4: User user's stories.
 
@@ -64,7 +64,7 @@ Table 4: User user's stories.
 | :----------:|:-------------:| :-----:|:-------|
 | US14 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
 | US15 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
-| US15 | Commentate Task | medium | As a project member, I want to be able to comment the ask, so that i can provide insight into a task.|
+| US15 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
 | US16 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
 | US17 | Ask to close task | medium | As a project member, I want to be able to signal that a task has been completed, so that the project administrator can close it.|
 | US18 | Chat in the forum | medium | As a project member, I want to be able to chat in the forum, so that i can contribute to the project via the discussion forum.|
@@ -92,13 +92,12 @@ Table 7: Project Owner's user stories.
 ### 2.2.3 Website Administrator
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US24| Create Projects | high | As a Website Administrator, I want to create open-source projects to all users, so that I can create community friendly projects.|
-| US25| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
-| US26| Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
-| US27| Accept User     | high | As an Website Administrator, I want to accept the registration of a new system user, so that he can access restricted content.|
-| US28| Ban User        | high | As an Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
-| US29| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
-| US30| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
+| US24| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
+| US25| Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
+| US26| Promote User     | high | As an Website Administrator, I want to promote a regular user to a premium one, so that he can access restricted website functionalities.|
+| US27| Ban User        | high | As an Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
+| US28| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
+| US29| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
 
 Table 8: Website Administrator user's stories.
 
