fix Business Rules...

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -110,8 +110,8 @@ Table 8: Website Administrator user's stories.
 ### A1.1. Business rules
 | Identifier | Name | Description |
 | :----------:|:-------------:|:-----------|
-| BR01 | Link User-Project | User can create a new project or join others by invitation.  |
-| BR02 | | |
+| BR01 | Profit | Premium users have special capabilities. (ex: create private projects, etc...) |
+| BR02 | Profanity | Users should follow and respect terms and services. |
 
 Table 9: Business rules.
 
