Added table's subtitles.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -11,7 +11,8 @@ For the **project management**, the actors are represented in the figure below a
 Figure 1: Actors.
 
 ![user roles](images/User_Roles.png)
-Figure 2: User Roles.
+
+Figure 2: User roles.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
@@ -28,12 +29,12 @@ Table 1: Actor's description.
 | Project Manager | Can manage all team members and tasks | A project supervisor |
 | Project Member | Can contribute to projects, creating and solving tasks | A project member |
 
-
-Table 2: User Roles.
+Table 2: User's roles.
 
 ## 2. User Stories
 
 ### 2.1. Visitor
+
 | Identifier | Name | Priority | Description |
 | :----------:|:--------------|:---------:|:------------|
 | US01 | Log in | high | As a Visitor, I want to authenticate into the system, so that I can access privileged information.  |
@@ -46,9 +47,10 @@ Table 2: User Roles.
 | US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.|
 | US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.|
 
-Table 2: Visitor's User Stories.
+Table 3: Visitor's user stories.
 
 ### 2.2. User
+
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US10 | Search projects | high | As an User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
@@ -56,7 +58,10 @@ Table 2: Visitor's User Stories.
 | US12 | Create project | high | As an User, I want to be able to create a project, so that I can use the website service.|
 | US13 | Statistics | low | As an User, I want to check usage statistics (for example the user that has contributed the  most to a project), so that I can stay informed.|
 
+Table 4: User user's stories.
+
 ### 2.2.1 Project Member
+
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US14 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
@@ -66,21 +71,30 @@ Table 2: Visitor's User Stories.
 | US17 | Ask to close task | medium | As a project member, I want to be able to signal that a task has been completed, so that the project administrator can close it.|
 | US18 | Chat in the forum | medium | As a project member, I want to be able to chat in the forum, so that i can contribute to the project via the discussion forum.|
 
+Table 5: Project Member's user stories.
+
 ### 2.2.2 Project Administrator
+
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US19 | Close Task | high | As a project administrator, I want to be able to fully close tasks that have been completed, so that they don't clutter the task list.|
 | US19 | Edit tasks | high | As a project administrator, I want to edit a task, so that i can better convey what is needed.|
 | US20 | Manage project member | medium | As a project administrator, I want to be able to add & remove project members, so that they can contribute to our project.|
 
+Table 6: Project Administrator's user stories.
+
 ### 2.2.3 Project Owner
+
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US21 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
 | US22 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
 | US23 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
 
+Table 7: Project Owner's user stories.
+
 ### 2.2.3 Website Administrator
+
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
 | US24| Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
@@ -90,19 +104,24 @@ Table 2: Visitor's User Stories.
 | US28| Maintenance     | low | As an Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and functionalities.|
 | US29| General Messages| low | As an Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
 
+Table 8: Website Administrator user's stories.
+
 ## A1. Annex: Supplementary requirements
 
 > Annex including business rules, technical requirements, and restrictions.
 > For each subsection, a table containing identifiers, names, and descriptions for each requirement.
 
 ### A1.1. Business rules
+
 | Identifier | Name | Description |
 | :----------:|:-------------:|:-----------|
 | BR01 | Profit | Premium users have special capabilities. (ex: create private projects, etc...) |
 | BR02 | Profanity | Users should follow and respect terms and services. |
 
+Table 9: Business rules.
 
 ### A1.2. Technical requirements
+
 | Identifier | Name | Description |
 |:-----------:|:-------------:|:-----------|
 | TR01 |Availability |The system must be available 99 percent of the time 24/7 |
@@ -116,12 +135,18 @@ Table 2: Visitor's User Stories.
 | TR09 |Scalability |System must be prepared to deal with user base growth and corresponding operations |
 | TR10 |Ethics |The system must respect the ethical principles in software development. |
 
+Table 10: Technical requiriments.
+
 ### A1.3. Restrictions
+
 | Identifier | Name | Description |
 | :----------:|:-------------:|:----------- |
 | C01 |Deadline |The system should be ready to be used at the beginning of the semester so the students can organize themselves as quickly as possible|
+
+Table 11: Restrictions
+
 ***
-<!---
+<!--
 ## Revision history
 
 Changes made to the first submission:
@@ -129,7 +154,7 @@ Changes made to the first submission:
 1. Item 2
 
 ***
---->
+-->
 
 GROUP43, 18/02/2018
 
