--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -113,7 +113,7 @@ Table 8: Website Administrator user's stories.
 | Identifier | Name | Description |
 | :----------:|:-------------:|:-----------|
 | BR01 | Profit | Premium users have special capabilities. (ex: create private projects, etc...) |
-| BR02 | Profanity | Users should follow and respect terms and services. |
+| BR02 | User Rules | Users should follow and respect  the terms and services.|
 
 Table 9: Business rules.
 
