Embedding images using html instead of markdown

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -6,11 +6,11 @@ This artifact contains the specification of the actors and their users stories, 
 
 For the **project management**, the actors are represented in the figure below and described in the table.
 
-![diagram](images/Actors.png)
+<img src="images/Actors.png" height="450" title="Actors">
 
 Figure 1: Actors.
 
-![user roles](images/User_Roles.png)
+<img src="images/User_Roles.png" height="450" title="USer Roles">
 
 Figure 2: User roles.
 
