--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -10,7 +10,7 @@ For the **project management**, the actors are represented in the figure below a
 
 Figure 1: Actors.
 
-<img src="images/User_Roles.png" height="450" title="USer Roles">
+<img src="images/User_Roles.png" height="450" title="User Roles">
 
 Figure 2: User roles.
 
