Fixed initial introduction and actors table.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -1,6 +1,6 @@
 # A2: Actors and User stories
 
-This artifact contains the specification of the actors and their users stories, serving as agile documentation of project requirements.
+This artifact contains the specification of the actors and their user stories, serving as agile documentation of requirements for our Project Management Web Application.
 
 ## 1. Actors
 
@@ -19,7 +19,7 @@ Figure 2: User roles.
 | User | Generic user, can create and contribute to projects | Projects developers and contributors |
 | Visitor | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
 | Administrator | Authenticated user, can manage users and projects | Admin |
-| Api | External API's that will be used to register and authenticate into the system | Google or Facebook login |
+| OAUTH | OAUTH API's will be used to register and authenticate into the system. | Google/Facebook/Amazon/Microsoft/Twitter/etc... account|
 
 Table 1: Actor's description.
 
