--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -33,7 +33,7 @@ Table 2: User's roles.
 
 ## 2. User Stories
 
-### 2.1. Visitor
+### 2.1. User
 
 | Identifier | Name | Priority | Description |
 | :----------:|:--------------|:---------:|:------------|
@@ -49,7 +49,7 @@ Table 2: User's roles.
 
 Table 3: Visitor's user stories.
 
-### 2.2. User
+### 2.1.1 Authenticated User
 
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
@@ -60,7 +60,7 @@ Table 3: Visitor's user stories.
 
 Table 4: User user's stories.
 
-### 2.2.1 Project Member
+### 2.1.1.1 Project Member
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
@@ -73,7 +73,7 @@ Table 4: User user's stories.
 
 Table 5: Project Member's user stories.
 
-### 2.2.2 Project Administrator
+### 2.1.1.2 Project Administrator
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
@@ -83,7 +83,7 @@ Table 5: Project Member's user stories.
 
 Table 6: Project Administrator's user stories.
 
-### 2.2.3 Project Owner
+### 2.1.1.3 Project Owner
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
