--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -64,22 +64,25 @@ Table 4: User user's stories.
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
+| US14 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
 | US14 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
 | US15 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
 | US15 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
 | US16 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
 | US17 | Ask to close task | medium | As a project member, I want to be able to signal that a task has been completed, so that the project administrator can close it.|
-| US18 | Chat in the forum | medium | As a project member, I want to be able to chat in the forum, so that i can contribute to the project via the discussion forum.|
+| US14 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
+| US14 | Create Post | high | As a project member, I want to create a post in the forum, so that i can discuss a part of the project.|
+| US14 | Reply to Post | high | As a project member, I want to reply to a post in the forum, so that I can give my opinion on a part of the project.|
 
 Table 5: Project Member's user stories.
 
-### 2.1.1.2 Project Administrator
+### 2.1.1.2 Project Manager
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US19 | Close Task | high | As a project administrator, I want to be able to fully close tasks that have been completed, so that they don't clutter the task list.|
-| US19 | Edit tasks | high | As a project administrator, I want to edit a task, so that i can better convey what is needed.|
-| US20 | Manage project member | medium | As a project administrator, I want to be able to add & remove project members, so that they can contribute to our project.|
+| US19 | Close Task | high | As a project manager, I want to be able to fully close tasks that have been completed, so that they don't clutter the task list.|
+| US19 | Edit tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
+| US20 | Manage project member | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
 
 Table 6: Project Administrator's user stories.
 
