Add Log Out and Register Form.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -44,8 +44,8 @@ Table 2: User's roles.
 | US05 | FAQ page | high | As a Visitor, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
 | US06 | Contact page | high | As a Visitor, I want to access contact page, so that I can have ways to contact the owner if I want to.|
 | US07 | Projects page | high | As a Visitor, I want to access projects page, so that I can see public projects.|
-| US08 | API Log in | low | As a Visitor, I want to authenticate into the system using a third party service, such as Google or Facebook.|
-| US09 | API Register | low | As a Visitor, I want to register myself into the system using a third party service, such as Google or Facebook.|
+| US08 | Log in | high | As a Visitor, I want to authenticate into the system using a third party account.|
+| US09 | Register | high | As a Visitor, I want to register myself into the system using a third party service.|
 
 Table 3: Visitor's user stories.
 
@@ -53,10 +53,11 @@ Table 3: Visitor's user stories.
 
 | Identifier | Name | Priority | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US10 | Search projects | high | As an User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
-| US11 | Edit profile | high | As an User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
-| US12 | Create project | high | As an User, I want to be able to create a project, so that I can use the website service.|
-| US13 | Statistics | low | As an User, I want to check usage statistics (for example the user that has contributed the  most to a project), so that I can stay informed.|
+| US10 | Search projects | high | As an Authenticated User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
+| US11 | Edit profile | high | As an Authenticated User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
+| US12 | Create project | high | As an Authenticated User, I want to be able to create a project, so that I can use the website service.|
+| US13 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example the user that has contributed the  most to a project), so that I can stay informed.|
+| US14 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
 
 Table 4: User user's stories.
 
@@ -115,8 +116,8 @@ Table 8: Website Administrator user's stories.
 
 | Identifier | Name | Description |
 | :----------:|:-------------:|:-----------|
-| BR01 | Profit | Premium users have special capabilities. (ex: create private projects, etc...) |
-| BR02 | User Rules | Users should follow and respect  the terms and services.|
+| BR01 | Register | To register, user must fill a register form with full name, nickname, e-mail, birthday, gender and instuticion (not required). |
+| BR02 | Banned Users | ****|
 
 Table 9: Business rules.
 
