Add some business rules.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -19,7 +19,7 @@ Figure 2: User roles.
 | User | Generic user, can create and contribute to projects | Projects developers and contributors |
 | Visitor | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
 | Administrator | Authenticated user, can manage users and projects | Admin |
-| OAUTH | OAUTH API's will be used to register and authenticate into the system. | Google/Facebook/Amazon/Microsoft/Twitter/etc... account|
+| OAUTH | OAUTH Protocol (API) will be used to register and authenticate into the system. | Google/Facebook/Amazon/Microsoft/Twitter/etc... account|
 
 Table 1: Actor's description.
 
@@ -56,7 +56,7 @@ Table 3: Visitor's user stories.
 | US10 | Search projects | high | As an Authenticated User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
 | US11 | Edit profile | high | As an Authenticated User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
 | US12 | Create project | high | As an Authenticated User, I want to be able to create a project, so that I can use the website service.|
-| US13 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example the user that has contributed the  most to a project), so that I can stay informed.|
+| US13 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example the user that has contributed the most to a project), so that I can stay informed.|
 | US14 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
 
 Table 4: User user's stories.
@@ -74,6 +74,7 @@ Table 4: User user's stories.
 | US14 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
 | US14 | Create Post | high | As a project member, I want to create a post in the forum, so that i can discuss a part of the project.|
 | US14 | Reply to Post | high | As a project member, I want to reply to a post in the forum, so that I can give my opinion on a part of the project.|
+| US14 | Leave Project | high | As a project member, I want to leave a project, so that I can stop my participation.|
 
 Table 5: Project Member's user stories.
 
@@ -117,7 +118,11 @@ Table 8: Website Administrator user's stories.
 | Identifier | Name | Description |
 | :----------:|:-------------:|:-----------|
 | BR01 | Register | To register, user must fill a register form with full name, nickname, e-mail, birthday, gender and instuticion (not required). |
-| BR02 | Banned Users | ****|
+| BR02 | Project Member Banned/Removed | ****|
+| BR02 | Project Manager Banned/Removed | ****|
+| BR02 | Project Owner Banned | ****|
+| BR02 | Project Owner wants to leave | Project Owner must transfer project's ownership to other Project Member before leave.|
+| BR02 | Authenticated User Banned | ****|
 
 Table 9: Business rules.
 
