Delete account US, Mark Task as completed and some other US
Alot of them aren't complete and we still have to fill their description

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -58,6 +58,7 @@ Table 3: Visitor's user stories.
 | US12 | Create project | high | As an Authenticated User, I want to be able to create a project, so that I can use the website service.|
 | US13 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example the user that has contributed the most to a project), so that I can stay informed.|
 | US14 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
+| US14 | Delete account | high | As a Authenticated User, I want to be delete my account, so that my information is no longer stored by the website.|
 
 Table 4: User user's stories.
 
@@ -69,6 +70,7 @@ Table 4: User user's stories.
 | US14 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
 | US15 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
 | US15 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
+| US15 | Mark Task as Completed | high | As a project member, I want to mark a task as completed, so that no one "wastes" their time doing it.|
 | US16 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
 | US17 | Ask to close task | medium | As a project member, I want to be able to signal that a task has been completed, so that the project administrator can close it.|
 | US14 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
@@ -82,8 +84,15 @@ Table 5: Project Member's user stories.
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
-| US19 | Close Task | high | As a project manager, I want to be able to fully close tasks that have been completed, so that they don't clutter the task list.|
-| US19 | Edit tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
+| US19 | Close Task | high | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
+| US19 | Create Task Tags | high | As a project manager, I want, so that .|
+| US19 | Delete Task Tags | high | As a project manager, I want  so that .|
+| US19 | Edit Tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
+| US19 | Delete Task | high | As a project manager, I want to delete a task, so that .|
+| US19 | Delete Task Comment | high | As a project manager, I want to delete a task comment, so that .|
+| US19 | Assign to Task | high | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
+| US19 | Delete Post | high | As a project manager, I want to delete a post, so that .|
+| US19 | Delete Reply | high | As a project manager, I want to delete a reply to a post, so that .|
 | US20 | Manage project member | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
 
 Table 6: Project Administrator's user stories.
