Add View Project US to Project Member.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -1,10 +1,10 @@
 # A2: Actors and User stories
 
-This artifact contains the specification of the actors and their user stories, serving as agile documentation of requirements for our Project Management Web Application.
+This artifact contains the specification of the actors and their user stories, serving as agile documentation of requirements for our **Project Management** Web Application.
 
 ## 1. Actors
 
-For the **project management**, the actors are represented in the figure below and described in the table.
+For the project management, the actors are represented in the figure below and described in the table.
 
 <img src="images/Actors.png" height="450" title="Actors">
 
@@ -66,6 +66,7 @@ Table 4: User user's stories.
 
 | Identifier  | Name          | Priority  | Description |
 | :----------:|:-------------:| :-----:|:-------|
+| US14 | View Project | high | As a project member, I want to be able to view a project from my projects list, so that I can see the current state of a project.|
 | US14 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
 | US14 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
 | US15 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
