Fixed Visitor/User/Authenticated User Roles.

--- a/artifacts/A2.md
+++ b/artifacts/A2.md
@@ -16,8 +16,9 @@ Figure 2: User roles.
 
 | Identifier | Description | Example |
 |:----------:|:------------|:--------|
-| User | Generic user, can create and contribute to projects | Projects developers and contributors |
-| Visitor | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
+| Visitor | *** | *** |
+| User | Unauthenticated user, can see public projects but can't contribute to any of them | n/a |
+| Authenticated User | Authenticated user, can create and contribute to projects | Projects developers and contributors |
 | Administrator | Authenticated user, can manage users and projects | Admin |
 | OAUTH | OAUTH Protocol (API) will be used to register and authenticate into the system. | Google/Facebook/Amazon/Microsoft/Twitter/etc... account|
 
